<resources>
    <string name="app_name">OpenSourceStats</string>
    <string name="title_details">Details</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_progress">Progress</string>
    <string name="title_activity_auth">Authentication</string>
    <string name="button">Authenticate</string>
    <string name="auth_success_text">Authentication Successful</string>
    <string name="auth_failed_text">Authentication Failed</string>
    <string name="overview_current_week_header">Current Week Overview</string>
    <string name="commit_text">Commits:</string>
    <string name="issue_text">Issues:</string>
    <string name="pull_request_text">Pull Requests:</string>
    <string name="pull_request_review_text">Pull Request Reviews:</string>
    <string name="overview_last_week_header">Last Week Overview</string>
    <string name="to_commit_repos_text">Repositories with Commits</string>
    <string name="to_issue_repos_text">Repositories with Issues</string>
    <string name="to_pull_request_repos_text">Repositories with Pull Requests</string>
    <string name="to_pull_request_review_repos_text">Repositoris with Pull Request Reviews</string>
    <string name="not_implemented">Not Implemented</string>
</resources>