<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_details"
        android:name="de.lukaspanni.opensourcestats.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.lukaspanni.opensourcestats.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="de.lukaspanni.opensourcestats.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />
</navigation>